icon small fix

--- a/css/style.css
+++ b/css/style.css
@@ -183,37 +183,50 @@ contact us
     margin-top: 0px;
     margin-bottom: 1%;
     text-align: center;
-    font-size: 18px;
-       background: linear-gradient(to bottom right, #dedce8, #f9f9f9,#1111);
+    font-size: 15px;
     border-radius: 30px;
-    
+    background-color: #f5f5f5;
     
 }
 .cont{
-        background: linear-gradient(to bottom right, #1111, #f9f9f9,#1111);
-    padding: 10px 0 20px;
-    border-radius: 30px 50px;
+   
+    background: linear-gradient(to bottom right, #1111,#f2f2f2, #dedce8);
+    border-radius: 25px 15px;
+    padding: 3% 3% 3%;
+    
     
 }
 .cont .fa{
-    font-size: 30px;
+    font-size: 20px;
     
 }
 .cont .fa-2x{
     letter-spacing: 15px; 
     color: #5c5d60;
+    font-size: 25px;
 }
 .cont .fa-2x:hover{
     color: #110011;
-    font-size: 38px;
+    font-size: 30px;
 }
 .cont a{
     text-decoration: none;
 }
+.cont li{
+    display: block;
+    line-height: 2.5;
+}
 .contact h4{
-    font-size: 35px;
+    font-size: 25px;
     font-family: courier
 }
+p.email{
+    
+    font-size: 19px;
+    
+}
+
+
 @media(max-width:600px) {
     .header{
     height: 50%;
@@ -236,7 +249,7 @@ contact us
     
 }
 p.intro{
-font-size: 14px; 
+font-size: 17px; 
     text-align: justify;
     letter-spacing: 1px;
 }
